# BAMalyzer

./: .gitignore  CMakeLists.txt  README.md
include/: BamAnalyzer.h
src/: BamAnalyzer.cpp  main.cpp
